# heappy

./: .kodiak.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/complex/: Cargo.toml
examples/complex/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
src/: adapter.rs  collector.rs  hook.rs  jemalloc_adapter.rs  jemalloc_shim.rs  lib.rs  main.rs  profiler.rs  shim.rs
