[package]
name = "heappy"
version = "0.1.0"
authors = [ "Marko Mikulicic <mkm@influxdata.com>" ]
edition = "2021"

[workspace]
members = [
    "examples/complex",
    "examples/simple",
]

[profile.release]
debug = true

[features]
default = []
jemalloc_shim = [ "tikv-jemalloc-sys" ]
enable_heap_profiler = [ "jemalloc_shim" ]
measure_free = []

[dependencies]
backtrace = "0.3.68"
bytes = "1.4.0"
lazy_static = "1.4.0"
libc = { version = "^0.2.147", default-features = false }
pprof = {version = "^0.12.0", features = [ "prost-codec", "flamegraph", "protobuf" ] }
spin = "0.9.8"
tikv-jemalloc-sys = { version = "0.5", optional = true, features = [ "stats" ] }
thiserror = "^1.0.43"
